src/objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Apt_No__c</fullName>
        <label>Apt. No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Seller</label>
        <referenceTo>Seller__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street_No__c</fullName>
        <label>Street No</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADD-{00000}</displayFormat>
        <label>Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PostalCodeRule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( Postal_Code__c ,$CustomMetadata.Validation_Setting__mdt.Postal_Code.Value__c ))</errorConditionFormula>
        <errorMessage>Please provide correct postal code</errorMessage>
    </validationRules>
</CustomObject>